fix layout issue

--- a/styles.css
+++ b/styles.css
@@ -51,7 +51,6 @@ p {
   display: flex;
   flex-direction: column;
   width: 30%;
-  margin: 0 auto;
   border-radius: 20px;
   overflow: hidden;
 }
